--- a/guess-game/package.json
+++ b/guess-game/package.json
@@ -11,8 +11,11 @@
   "dependencies": {
     "@expo/webpack-config": "^18.0.1",
     "expo": "~49.0.5",
+    "expo-app-loading": "^2.1.1",
     "expo-cli": "^6.3.10",
+    "expo-font": "~11.4.0",
     "expo-linear-gradient": "~12.3.0",
+    "expo-splash-screen": "^0.20.5",
     "expo-status-bar": "~1.6.0",
     "react": "18.2.0",
     "react-native": "0.72.3",
